/*
 * Copyright (C) 2020 David Vidal Escudero - Free Open Source Software Consultancy
 *
 *       This program is free software: you can redistribute it and/or modify
 *       it under the terms of the GNU General Public License as published by
 *       the Free Software Foundation, either version 3 of the License, or
 *       (at your option) any later version.
 *
 *       This program is distributed in the hope that it will be useful,
 *       but WITHOUT ANY WARRANTY; without even the implied warranty of
 *       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *       GNU General Public License for more details.
 *
 *       You should have received a copy of the GNU General Public License
 *       along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

plugins {
    id 'java'
}

group 'org.dvidal'
version '1.0'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.12.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.12.1'

    //noinspection VulnerableLibrariesLocal
    implementation 'com.google.api-client:google-api-client:2.7.2'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.39.0'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20250211-2.0.0'
    implementation 'com.google.apis:google-api-services-drive:v3-rev20250220-2.0.0'

    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    implementation("org.jetbrains:annotations:26.0.2")
}

test {
    useJUnitPlatform()
    /*doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
        ]
    }*/
}
/*
compileJava {
    inputs.property("moduleName", "alexios.main")
    sourceCompatibility = 23
    targetCompatibility = 23
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}*/

/*compileTestJava {
    inputs.property("moduleName", "alexios.main")
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'org.junit.jupiter.api',
                '--add-reads', "alexios.main=org.junit.jupiter.api",
                '--patch-module', "alexios.main=" + files(sourceSets.test.java.srcDirs).asPath,
        ]
        classpath = files()
    }
}*/

